# navfuse

./: CMakeLists.txt  README.md  package.xml
bag/rosbag2_2023_12_22-06_52_11/: metadata.yaml
config/: ekf_global.yaml  ekf_with_gps.yaml  gpt_config.yaml
demo_data/: fake_gps  publish_demo_data  square_gps.py
firmware/: gps_plus_imu.ino
firmware/gps_plus_imu/: gps_plus_imu.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/navfuse/share/navfuse/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/navfuse/share/navfuse/cmake/: navfuseConfig.cmake
install/navfuse/share/navfuse/launch/: test.launch  tran.launch.py
launch/: ekf_global.launch.py  ekf_gpt.py  launch.launch.py  mapviz.launch.py  test.launch.xml  tran.launch.py  turtlebot3_sf.py
log/: latest_build
scripts/: fake_gps.py
src/: gps_frame.cpp  gps_transform_publisher.cpp  line_trip_tuto.cpp  square.cpp
test/: cube_test.cpp  line_trip_tuto.cpp
tf_view/: frames_2023-12-07_04.00.37.gv
tf_view/wgs84_frame/: frames_2023-12-09_04.31.03.gv
